examples/test/testpolicy14124.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14124
  namespace: namespace464
spec:
  podSelector:
    matchLabels:
      key13: value49
      key45: value28
      key8: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value12
      podSelector:
        matchLabels:
          key27: value26
          key20: value40
          key22: value35
